--- a/styles/contact.css
+++ b/styles/contact.css
@@ -10,7 +10,7 @@ body {
   }
   
   .contact-form .container {
-    background: rgba(255, 255, 255, 0.9); /* Semi-transparent white background */
+    background: rgba(255, 255, 255, 0.9); 
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
